--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Web Caculator</title>
     <link rel="stylesheet" href="style.css" />
   </head>
+  <header>
+    <h1>Quick Digits Pro</h1>
+    <h2>Simple Caculator</h2>
+  </header>
   <body>
     <div class="container">
       <div class="caculator">
